# api/openapi/model/amounts.go
@@ -1,39 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package model
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-)
-
-// Amounts list of amounts
-//
-// swagger:model amounts
-type Amounts []Amount
-
-// Validate validates this amounts
-func (m Amounts) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	for i := 0; i < len(m); i++ {
-
-		if err := m[i].Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName(strconv.Itoa(i))
-			}
-			return err
-		}
-
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
