# api/openapi/model/check.go
@@ -1,99 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package model
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"bytes"
-	"encoding/json"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// Check check
-//
-// swagger:model check
-type Check struct {
-
-	// license
-	License string `json:"license,omitempty"`
-
-	// position
-	Position *Position `json:"position,omitempty"`
-}
-
-// UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
-func (m *Check) UnmarshalJSON(data []byte) error {
-	var props struct {
-
-		// license
-		License string `json:"license,omitempty"`
-
-		// position
-		Position *Position `json:"position,omitempty"`
-	}
-
-	dec := json.NewDecoder(bytes.NewReader(data))
-	dec.DisallowUnknownFields()
-	if err := dec.Decode(&props); err != nil {
-		return err
-	}
-
-	m.License = props.License
-	m.Position = props.Position
-	return nil
-}
-
-// Validate validates this check
-func (m *Check) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validatePosition(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *Check) validatePosition(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Position) { // not required
-		return nil
-	}
-
-	if m.Position != nil {
-		if err := m.Position.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("position")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Check) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Check) UnmarshalBinary(b []byte) error {
-	var res Check
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
