# api/openapi/model/position.go
@@ -1,92 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package model
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"bytes"
-	"encoding/json"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// Position position
-//
-// swagger:model position
-type Position struct {
-
-	// x
-	X int64 `json:"x,omitempty"`
-
-	// y
-	Y int64 `json:"y,omitempty"`
-
-	// height
-	Height int64 `json:"height,omitempty"`
-
-	// width
-	Width int64 `json:"width,omitempty"`
-
-	// depth
-	Depth int64 `json:"depth,omitempty"`
-}
-
-// UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
-func (m *Position) UnmarshalJSON(data []byte) error {
-	var props struct {
-
-		// x
-		X int64 `json:"x,omitempty"`
-
-		// y
-		Y int64 `json:"y,omitempty"`
-
-		// height
-		Height int64 `json:"height,omitempty"`
-
-		// width
-		Width int64 `json:"width,omitempty"`
-
-		// depth
-		Depth int64 `json:"depth,omitempty"`
-	}
-
-	dec := json.NewDecoder(bytes.NewReader(data))
-	dec.DisallowUnknownFields()
-	if err := dec.Decode(&props); err != nil {
-		return err
-	}
-
-	m.X = props.X
-	m.Y = props.Y
-	m.Height = props.Height
-	m.Width = props.Width
-	m.Depth = props.Depth
-	return nil
-}
-
-// Validate validates this position
-func (m *Position) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Position) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Position) UnmarshalBinary(b []byte) error {
-	var res Position
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
