# api/openapi/swagger.yml
@@ -2,7 +2,7 @@ swagger: '2.0'
 
 info:
   title: HighLoad Cup 2020
-  version: 0.0.1
+  version: 0.1.0
   description: |
     # IT RALLY 2020 HighLoad Cup
 basePath: /
@@ -13,94 +13,143 @@ consumes:
 produces:
   - application/json
 
-
 definitions:
-  number:
-    description: number
-    type: integer
-  amount:
-    description: amount
-    type: integer
-  amounts:
-    description: list of amounts
+  error:
+    description: |
+      This model should match output of errors returned by go-swagger
+      (like failed validation), to ensure our handlers use same format.
+    type: object
+    required:
+      - code
+      - message
+    properties:
+      code:
+        description: Either same as HTTP Status Code OR >= 600 with HTTP Status Code 422.
+        type: integer
+        format: int32
+      message:
+        type: string
+  wallet:
+    description: Wallet with some amount of money.
+    #type: integer
+    #minimum: 0
     type: array
     items:
-      $ref: '#/definitions/amount'
+      type: string
+  amount:
+    description: Non-negative amount of treasures/etc.
+    type: integer
+    minimum: 0
   license:
+    description: License for digging.
     type: object
+    required:
+      - id
+      - digAllowed
+      - digUsed
     properties:
       id:
         type: string
-      remain:
+      digAllowed:
         $ref: '#/definitions/amount'
-  licenses:
-    description: list of licenses issued
+      digUsed:
+        $ref: '#/definitions/amount'
+  licenseList:
+    description: List of issued licenses.
     type: array
     items:
       $ref: '#/definitions/license'
-  position:
+  area:
     type: object
+    required:
+      - posX
+      - posY
     properties:
-      'x':
+      posX:
         type: integer
-      'y':
+        minimum: 0
+      posY:
         type: integer
-      'height':
+        minimum: 0
+      sizeX:
         type: integer
-      'width':
+        minimum: 1
+      sizeY:
         type: integer
-  check:
+        minimum: 1
+  report:
     type: object
+    required:
+      - area
+      - amount
     properties:
-      license:
-        type: string
-      position:
-        $ref: '#/definitions/position'
+      area:
+        $ref: '#/definitions/area'
+      amount:
+        $ref: '#/definitions/amount'
+      amountPerDepth:
+        description: Histogram, key is depth ("1", "2", …).
+        type: object
+        additionalProperties:
+          $ref: '#/definitions/amount'
   dig:
     type: object
+    required:
+      - licenseID
+      - posX
+      - posY
+      - depth
     properties:
-      license:
-        type: string
+      licenseID:
         description: ID of the license this request is attached to.
-      full:
-        type: boolean
-        description: Should the whole cube be digged. Request will stop on the first treasure found if false.
-      position:
-        $ref: '#/definitions/position'
+        type: string
+      posX:
+        type: integer
+        minimum: 0
+      posY:
+        type: integer
+        minimum: 0
+      depth:
+        type: integer
+        minimum: 1
   treasure:
+    description: Treasure ID.
     type: string
-    description: treasure ID to be cashed
-  treasures:
-    description: list of treasure IDs
+  treasureList:
+    description: List of treasures.
     type: array
     items:
       $ref: '#/definitions/treasure'
 
 responses:
+  error:
+    description: General errors using same model as used by go-swagger for validation errors.
+    schema:
+      $ref: '#/definitions/error'
   balance:
-    description: balance
+    description: Current balance.
     schema:
-      $ref: '#/definitions/amount'
-  amounts:
-    description: list of amounts
+      $ref: '#/definitions/wallet'
+  licenseList:
+    description: List of issued licenses.
     schema:
-      $ref: '#/definitions/amounts'
-  licenses:
-    description: list of licenses issued
+      $ref: '#/definitions/licenseList'
+  license:
+    description: Issued license.
     schema:
-      $ref: '#/definitions/licenses'
-  check:
-    description: number of objects (treasures or even rocks) found
+      $ref: '#/definitions/license'
+  explore:
+    description: Report about found treasures.
     schema:
-      $ref: '#/definitions/number'
+      $ref: '#/definitions/report'
   dig:
-    description: list of treasures found
+    description: List of treasures found.
     schema:
-      $ref: '#/definitions/treasures'
-  err500:
-    description: Internal Server Error
-  err402:
-    description: Not enough money
+      $ref: '#/definitions/treasureList'
+  cash:
+    description: Payment for treasure.
+    schema:
+      $ref: '#/definitions/wallet'
 
 paths:
   /balance:
@@ -109,71 +158,70 @@ paths:
       description: Returns a current balance.
       responses:
         '200': { $ref: '#/responses/balance' }
-        '500': { $ref: '#/responses/err500' }
+        default: { $ref: '#/responses/error' }
+
   /licenses:
     get:
       operationId: listLicenses
-      description: Returns a list of currently provided licenses.
+      description: Returns a list of issued licenses.
       responses:
-        '200': { $ref: '#/responses/licenses' }
-        '500': { $ref: '#/responses/err500' }
+        '200': { $ref: '#/responses/licenseList' }
+        default: { $ref: '#/responses/error' }
     post:
-      operationId: obtainLicense
-      description: Returns a newly created license.
+      operationId: issueLicense
+      description: Issue a new license.
       parameters:
-        - name: amount
-          description: Amount to spend for a license.
+        - name: args
+          description: Amount of money to spend for a license.
           required: true
           in: body
           schema:
-            $ref: '#/definitions/amount'
+            $ref: '#/definitions/wallet'
       responses:
-        '200': { $ref: '#/responses/licenses' }
-        '402': { $ref: '#/responses/err402' }
-        '500': { $ref: '#/responses/err500' }
-  /check:
+        '200': { $ref: '#/responses/license' }
+        default: { $ref: '#/responses/error' }
+
+  /explore:
     post:
-      operationId: checkCube
-      description: Returns number of treasures in the provided cube.
+      operationId: exploreArea
+      description: Returns amount of treasures in the provided area at full depth.
       parameters:
-        - name: request
-          description: Cube to be checked with the license should be used to check. License available amount will be reduced according to the cube volume.
+        - name: args
+          description: Area to be explored.
           required: true
           in: body
           schema:
-            $ref: '#/definitions/check'
+            $ref: '#/definitions/area'
       responses:
-        '200': { $ref: '#/responses/check' }
-        '402': { $ref: '#/responses/err402' }
-        '500': { $ref: '#/responses/err500' }
+        '200': { $ref: '#/responses/explore' }
+        default: { $ref: '#/responses/error' }
+
   /dig:
     post:
-      operationId: digCube
-      description: Returns a list of found treasures IDs.
+      operationId: dig
+      description: Dig at given point and depth, returns found treasures.
       parameters:
-        - name: request
-          description: Cube to be digged with the license should be charged.
+        - name: args
+          description: License, place and depth to dig.
           required: true
           in: body
           schema:
             $ref: '#/definitions/dig'
       responses:
         '200': { $ref: '#/responses/dig' }
-        '402': { $ref: '#/responses/err402' }
-        '500': { $ref: '#/responses/err500' }
+        default: { $ref: '#/responses/error' }
+
   /cash:
     post:
       operationId: cash
-      description: Returns a list of found treasures IDs.
+      description: Exchange provided treasure for money.
       parameters:
-        - name: request
-          description: .
+        - name: args
+          description: Treasure for exchange.
           required: true
           in: body
           schema:
-            $ref: '#/definitions/treasures'
+            $ref: '#/definitions/treasure'
       responses:
-        '201':
-          description: Cashed
-        '500': { $ref: '#/responses/err500' }
-
+        '200': { $ref: '#/responses/cash' }
+        default: { $ref: '#/responses/error' }
